Fixed composer tag.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "rawphp/raw-database",
     "type": "library",
     "description": "RawDatabase is a wrapper with useful utility functions around the MySQLi class and is used by RawPHP and other applications.",
-    "keywords": [ "database", "mysql", "mydqli" ],
+    "keywords": [ "database", "mysql", "mysqli" ],
     "homepage": "http://rawphp.org",
     "license": "MIT",
     "authors": [
