--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-nbproject/*
-tests/_output/*
-/dist/
-tests/_output/*
 /vendor/
 project.xml
 project.properties
 /tests/build/
 /composer.lock
-!/tests/_output/empty
 /build/
+.idea
