--- a/composer.json
+++ b/composer.json
@@ -12,25 +12,23 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "rawphp/raw-base": "1.0.0-RC-2",
-        "rawphp/raw-yaml": "1.0.0-RC-3"
+        "php": ">=5.4.0",
+        "rawphp/raw-support": "0.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.5",
-        "squizlabs/php_codesniffer": "dev-master",
         "rawphp/raw-code-standards": "1.*@dev",
-        "phpdocumentor/phpdocumentor": "dev-master",
 		"satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
-        "classmap": [
-            "lib/"
-        ]
+        "psr-4": {
+            "RawPHP\\RawDatabase\\": "src/RawPHP/RawDatabase/"
+        }
     },
     "extra": {
         "branch-alias": {
             "dev-master": "0.x-dev"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
